// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wall Elevation Engine Golden snapshot tests should match golden snapshot for cabinets touching edges 1`] = `
{
  "cabinetFrames": [
    {
      "cabinet_label": "B24-FF-01",
      "height_px": 690,
      "id": "cab1",
      "width_px": 480,
      "x_px": 40,
      "y_px": 40,
    },
    {
      "cabinet_label": "B30-FF-02",
      "height_px": 690,
      "id": "cab2",
      "width_px": 600,
      "x_px": 520,
      "y_px": 40,
    },
    {
      "cabinet_label": "B36-FF-03",
      "height_px": 690,
      "id": "cab3",
      "width_px": 720,
      "x_px": 1120,
      "y_px": 40,
    },
  ],
  "height_px": 770,
  "svg": "<svg xmlns="http://www.w3.org/2000/svg" width="1880" height="770" viewBox="0 0 1880 770">
<rect x="0" y="0" width="1880" height="770" fill="white"/>
<rect x="40" y="40" width="1800" height="690" fill="none" stroke="black" stroke-width="1" stroke-dasharray="4,2"/>
<text x="940" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">Wall: 90"</text>
<g transform="translate(40, 40)">
<rect x="0" y="0" width="480" height="690" fill="white"/>
<rect x="0" y="0" width="480" height="690" fill="none" stroke="black" stroke-width="1"/>
<text x="240" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">B24-FF-01</text>
<rect x="0" y="0" width="480" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="660" width="480" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="32.5" width="480" height="625" fill="#ffffff" stroke="#000000" stroke-width="1" />
</g>
<text x="280" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">B24-FF-01</text>
<g transform="translate(520, 40)">
<rect x="0" y="0" width="600" height="690" fill="white"/>
<rect x="0" y="0" width="600" height="690" fill="none" stroke="black" stroke-width="1"/>
<text x="300" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">B30-FF-02</text>
<rect x="0" y="0" width="600" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="660" width="600" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="32.5" width="600" height="625" fill="#ffffff" stroke="#000000" stroke-width="1" />
</g>
<text x="820" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">B30-FF-02</text>
<g transform="translate(1120, 40)">
<rect x="0" y="0" width="720" height="690" fill="white"/>
<rect x="0" y="0" width="720" height="690" fill="none" stroke="black" stroke-width="1"/>
<text x="360" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">B36-FF-03</text>
<rect x="0" y="0" width="720" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="660" width="720" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="32.5" width="720" height="625" fill="#ffffff" stroke="#000000" stroke-width="1" />
</g>
<text x="1480" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">B36-FF-03</text>
</svg>",
  "warnings": [],
  "width_px": 1880,
}
`;

exports[`Wall Elevation Engine Golden snapshot tests should match golden snapshot for cabinets touching edges 2`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="1880" height="770" viewBox="0 0 1880 770">
<rect x="0" y="0" width="1880" height="770" fill="white"/>
<rect x="40" y="40" width="1800" height="690" fill="none" stroke="black" stroke-width="1" stroke-dasharray="4,2"/>
<text x="940" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">Wall: 90"</text>
<g transform="translate(40, 40)">
<rect x="0" y="0" width="480" height="690" fill="white"/>
<rect x="0" y="0" width="480" height="690" fill="none" stroke="black" stroke-width="1"/>
<text x="240" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">B24-FF-01</text>
<rect x="0" y="0" width="480" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="660" width="480" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="32.5" width="480" height="625" fill="#ffffff" stroke="#000000" stroke-width="1" />
</g>
<text x="280" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">B24-FF-01</text>
<g transform="translate(520, 40)">
<rect x="0" y="0" width="600" height="690" fill="white"/>
<rect x="0" y="0" width="600" height="690" fill="none" stroke="black" stroke-width="1"/>
<text x="300" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">B30-FF-02</text>
<rect x="0" y="0" width="600" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="660" width="600" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="32.5" width="600" height="625" fill="#ffffff" stroke="#000000" stroke-width="1" />
</g>
<text x="820" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">B30-FF-02</text>
<g transform="translate(1120, 40)">
<rect x="0" y="0" width="720" height="690" fill="white"/>
<rect x="0" y="0" width="720" height="690" fill="none" stroke="black" stroke-width="1"/>
<text x="360" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">B36-FF-03</text>
<rect x="0" y="0" width="720" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="660" width="720" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="32.5" width="720" height="625" fill="#ffffff" stroke="#000000" stroke-width="1" />
</g>
<text x="1480" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">B36-FF-03</text>
</svg>"
`;

exports[`Wall Elevation Engine Golden snapshot tests should match golden snapshot for default 3-cabinet wall 1`] = `
{
  "cabinetFrames": [
    {
      "cabinet_label": "B24-FF-01",
      "height_px": 690,
      "id": "cab1",
      "width_px": 480,
      "x_px": 40,
      "y_px": 40,
    },
    {
      "cabinet_label": "W30-FL-01",
      "height_px": 600,
      "id": "cab3",
      "width_px": 600,
      "x_px": 1240,
      "y_px": 130,
    },
  ],
  "height_px": 770,
  "svg": "<svg xmlns="http://www.w3.org/2000/svg" width="1880" height="770" viewBox="0 0 1880 770">
<rect x="0" y="0" width="1880" height="770" fill="white"/>
<rect x="40" y="40" width="1800" height="690" fill="none" stroke="black" stroke-width="1" stroke-dasharray="4,2"/>
<text x="940" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">Wall: 90"</text>
<g transform="translate(40, 40)">
<rect x="0" y="0" width="480" height="690" fill="white"/>
<rect x="0" y="0" width="480" height="690" fill="none" stroke="black" stroke-width="1"/>
<text x="240" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">B24-FF-01</text>
<rect x="0" y="0" width="480" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="660" width="480" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="32.5" width="480" height="625" fill="#ffffff" stroke="#000000" stroke-width="1" />
</g>
<text x="280" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">B24-FF-01</text>
<g transform="translate(1240, 130)">
<rect x="0" y="0" width="600" height="600" fill="white"/>
<rect x="0" y="0" width="600" height="600" fill="none" stroke="black" stroke-width="1"/>
<text x="300" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">W30-FL-01</text>
<rect x="0" y="0" width="600" height="600" fill="#ffffff" stroke="#000000" stroke-width="1" />
<text x="0" y="615" font-family="Arial, sans-serif" font-size="9" fill="orange">Warnings: no_face_frame</text>
</g>
<text x="1540" y="120" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">W30-FL-01</text>
</svg>",
  "warnings": [
    "B30-FF-01: height_mismatch",
    "W30-FL-01: no_face_frame",
  ],
  "width_px": 1880,
}
`;

exports[`Wall Elevation Engine Golden snapshot tests should match golden snapshot for default 3-cabinet wall 2`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="1880" height="770" viewBox="0 0 1880 770">
<rect x="0" y="0" width="1880" height="770" fill="white"/>
<rect x="40" y="40" width="1800" height="690" fill="none" stroke="black" stroke-width="1" stroke-dasharray="4,2"/>
<text x="940" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">Wall: 90"</text>
<g transform="translate(40, 40)">
<rect x="0" y="0" width="480" height="690" fill="white"/>
<rect x="0" y="0" width="480" height="690" fill="none" stroke="black" stroke-width="1"/>
<text x="240" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">B24-FF-01</text>
<rect x="0" y="0" width="480" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="660" width="480" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="32.5" width="480" height="625" fill="#ffffff" stroke="#000000" stroke-width="1" />
</g>
<text x="280" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">B24-FF-01</text>
<g transform="translate(1240, 130)">
<rect x="0" y="0" width="600" height="600" fill="white"/>
<rect x="0" y="0" width="600" height="600" fill="none" stroke="black" stroke-width="1"/>
<text x="300" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">W30-FL-01</text>
<rect x="0" y="0" width="600" height="600" fill="#ffffff" stroke="#000000" stroke-width="1" />
<text x="0" y="615" font-family="Arial, sans-serif" font-size="9" fill="orange">Warnings: no_face_frame</text>
</g>
<text x="1540" y="120" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">W30-FL-01</text>
</svg>"
`;

exports[`Wall Elevation Engine Golden snapshot tests should match golden snapshot for mixed heights baseline aligned 1`] = `
{
  "cabinetFrames": [
    {
      "cabinet_label": "B24-FF-01",
      "height_px": 690,
      "id": "cab1",
      "width_px": 480,
      "x_px": 40,
      "y_px": 40,
    },
    {
      "cabinet_label": "W30-FL-01",
      "height_px": 600,
      "id": "cab2",
      "width_px": 600,
      "x_px": 520,
      "y_px": 130,
    },
    {
      "cabinet_label": "B36-FF-02",
      "height_px": 690,
      "id": "cab3",
      "width_px": 720,
      "x_px": 1120,
      "y_px": 40,
    },
  ],
  "height_px": 770,
  "svg": "<svg xmlns="http://www.w3.org/2000/svg" width="1880" height="770" viewBox="0 0 1880 770">
<rect x="0" y="0" width="1880" height="770" fill="white"/>
<rect x="40" y="40" width="1800" height="690" fill="none" stroke="black" stroke-width="1" stroke-dasharray="4,2"/>
<text x="940" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">Wall: 90"</text>
<g transform="translate(40, 40)">
<rect x="0" y="0" width="480" height="690" fill="white"/>
<rect x="0" y="0" width="480" height="690" fill="none" stroke="black" stroke-width="1"/>
<text x="240" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">B24-FF-01</text>
<rect x="0" y="0" width="480" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="660" width="480" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="32.5" width="480" height="625" fill="#ffffff" stroke="#000000" stroke-width="1" />
</g>
<text x="280" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">B24-FF-01</text>
<g transform="translate(520, 130)">
<rect x="0" y="0" width="600" height="600" fill="white"/>
<rect x="0" y="0" width="600" height="600" fill="none" stroke="black" stroke-width="1"/>
<text x="300" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">W30-FL-01</text>
<rect x="0" y="0" width="600" height="600" fill="#ffffff" stroke="#000000" stroke-width="1" />
<text x="0" y="615" font-family="Arial, sans-serif" font-size="9" fill="orange">Warnings: no_face_frame</text>
</g>
<text x="820" y="120" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">W30-FL-01</text>
<g transform="translate(1120, 40)">
<rect x="0" y="0" width="720" height="690" fill="white"/>
<rect x="0" y="0" width="720" height="690" fill="none" stroke="black" stroke-width="1"/>
<text x="360" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">B36-FF-02</text>
<rect x="0" y="0" width="720" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="660" width="720" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="32.5" width="720" height="625" fill="#ffffff" stroke="#000000" stroke-width="1" />
</g>
<text x="1480" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">B36-FF-02</text>
</svg>",
  "warnings": [
    "W30-FL-01: no_face_frame",
  ],
  "width_px": 1880,
}
`;

exports[`Wall Elevation Engine Golden snapshot tests should match golden snapshot for mixed heights baseline aligned 2`] = `
"<svg xmlns="http://www.w3.org/2000/svg" width="1880" height="770" viewBox="0 0 1880 770">
<rect x="0" y="0" width="1880" height="770" fill="white"/>
<rect x="40" y="40" width="1800" height="690" fill="none" stroke="black" stroke-width="1" stroke-dasharray="4,2"/>
<text x="940" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">Wall: 90"</text>
<g transform="translate(40, 40)">
<rect x="0" y="0" width="480" height="690" fill="white"/>
<rect x="0" y="0" width="480" height="690" fill="none" stroke="black" stroke-width="1"/>
<text x="240" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">B24-FF-01</text>
<rect x="0" y="0" width="480" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="660" width="480" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="32.5" width="480" height="625" fill="#ffffff" stroke="#000000" stroke-width="1" />
</g>
<text x="280" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">B24-FF-01</text>
<g transform="translate(520, 130)">
<rect x="0" y="0" width="600" height="600" fill="white"/>
<rect x="0" y="0" width="600" height="600" fill="none" stroke="black" stroke-width="1"/>
<text x="300" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">W30-FL-01</text>
<rect x="0" y="0" width="600" height="600" fill="#ffffff" stroke="#000000" stroke-width="1" />
<text x="0" y="615" font-family="Arial, sans-serif" font-size="9" fill="orange">Warnings: no_face_frame</text>
</g>
<text x="820" y="120" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">W30-FL-01</text>
<g transform="translate(1120, 40)">
<rect x="0" y="0" width="720" height="690" fill="white"/>
<rect x="0" y="0" width="720" height="690" fill="none" stroke="black" stroke-width="1"/>
<text x="360" y="-10" text-anchor="middle" font-family="Arial, sans-serif" font-size="12" font-weight="bold" fill="black">B36-FF-02</text>
<rect x="0" y="0" width="720" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="660" width="720" height="30" fill="#e0e0e0" stroke="black" stroke-width="1"/>
<rect x="0" y="32.5" width="720" height="625" fill="#ffffff" stroke="#000000" stroke-width="1" />
</g>
<text x="1480" y="30" text-anchor="middle" font-family="Arial, sans-serif" font-size="10" font-weight="bold" fill="black">B36-FF-02</text>
</svg>"
`;
